<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TestableCoreLocation" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="82" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nyT-hn-yCo">
                                <rect key="frame" x="16" y="531.5" width="117" height="119.5"/>
                                <accessibility key="accessibilityConfiguration" identifier="SpeedLabelBlue">
                                    <accessibilityTraits key="traits" none="YES"/>
                                </accessibility>
                                <fontDescription key="fontDescription" type="system" pointSize="100"/>
                                <color key="textColor" red="0.0039215686274509803" green="0.098039215686274508" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="km/h" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IeJ-CW-hxT">
                                <rect key="frame" x="16" y="635" width="44.5" height="24"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <color key="textColor" red="0.0048598507420000003" green="0.096086271109999996" blue="0.57499289509999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ogG-Ls-fmG" customClass="BorderedButton" customModule="TestableCoreLocation" customModuleProvider="target">
                                <rect key="frame" x="261" y="623" width="98" height="36"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Max Speed">
                                    <color key="titleColor" red="0.0039215686269999999" green="0.098039215690000001" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="didTapMaxSpeed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Qdn-WI-F5G"/>
                                </connections>
                            </button>
                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e6Q-ss-tK0" userLabel="view">
                                <rect key="frame" x="0.0" y="597" width="375" height="70"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="82" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MWF-vO-KvT">
                                        <rect key="frame" x="16" y="-65.5" width="117" height="119.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="SpeedLabelWhite">
                                            <accessibilityTraits key="traits" none="YES"/>
                                        </accessibility>
                                        <fontDescription key="fontDescription" type="system" pointSize="100"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="km/h" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p2y-yV-scK">
                                        <rect key="frame" x="16" y="38" width="44.5" height="24"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kZT-EA-JGI" customClass="BorderedButton" customModule="TestableCoreLocation" customModuleProvider="target">
                                        <rect key="frame" x="254" y="26" width="105" height="36"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="105" id="a4N-iP-eEW"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="Max Speed">
                                            <color key="titleColor" red="0.0039215686269999999" green="0.098039215690000001" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="didTapMaxSpeed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zp4-UI-xvY"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" red="0.0048598507420000003" green="0.096086271109999996" blue="0.57499289509999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="SpeedView"/>
                                <constraints>
                                    <constraint firstItem="p2y-yV-scK" firstAttribute="leading" secondItem="e6Q-ss-tK0" secondAttribute="leading" constant="16" id="8gh-Rb-ab1"/>
                                    <constraint firstAttribute="bottom" secondItem="p2y-yV-scK" secondAttribute="bottom" constant="8" id="9Tx-2v-AGR"/>
                                    <constraint firstAttribute="bottom" secondItem="kZT-EA-JGI" secondAttribute="bottom" constant="8" id="A1S-94-Bfw"/>
                                    <constraint firstAttribute="bottom" secondItem="MWF-vO-KvT" secondAttribute="bottom" constant="16" id="GRD-Eb-dDy"/>
                                    <constraint firstAttribute="trailing" secondItem="kZT-EA-JGI" secondAttribute="trailing" constant="16" id="LWl-At-Vo9"/>
                                    <constraint firstAttribute="height" constant="70" id="RmN-n4-xJX"/>
                                    <constraint firstItem="MWF-vO-KvT" firstAttribute="leading" secondItem="e6Q-ss-tK0" secondAttribute="leading" constant="16" id="t84-j8-B6G"/>
                                </constraints>
                            </view>
                        </subviews>
                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <accessibility key="accessibilityConfiguration" identifier="RootView"/>
                        <constraints>
                            <constraint firstItem="e6Q-ss-tK0" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="8Ld-6E-UaW"/>
                            <constraint firstItem="nyT-hn-yCo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="InM-kC-St6"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="nyT-hn-yCo" secondAttribute="bottom" constant="16" id="KGR-7J-i1v"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ogG-Ls-fmG" secondAttribute="trailing" constant="16" id="L2f-KR-pnC"/>
                            <constraint firstItem="e6Q-ss-tK0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="O76-fC-rzK"/>
                            <constraint firstItem="e6Q-ss-tK0" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="niy-Ai-CRa"/>
                            <constraint firstItem="IeJ-CW-hxT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="vne-vk-QhR"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ogG-Ls-fmG" secondAttribute="bottom" constant="8" id="ypn-vA-zI5"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="IeJ-CW-hxT" secondAttribute="bottom" constant="8" id="zWX-Hu-W9X"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="speedViewHeightConstraint" destination="RmN-n4-xJX" id="N7U-LB-Kvn"/>
                        <outletCollection property="colorableViews" destination="e6Q-ss-tK0" collectionClass="NSMutableArray" id="IeY-NN-f3O"/>
                        <outletCollection property="speedLables" destination="MWF-vO-KvT" collectionClass="NSMutableArray" id="Mzq-KX-pRV"/>
                        <outletCollection property="speedLables" destination="nyT-hn-yCo" collectionClass="NSMutableArray" id="no1-eg-JcM"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="140" y="132.68365817091455"/>
        </scene>
    </scenes>
</document>
