...
        return true
    }
}

extension AppDelegate: XSPDLocationAuthorizationDelegate {
    func authorizationDenied(for locationAuthorization: XSPDLocationAuthorization) {
        let alertController = UIAlertController.init(title: "권한 사용안함", message: "이앱은 위치서비스 권한이 필요한 앱입니다.", preferredStyle: .alert)
        
        let okAction = UIAlertAction.init(title: "OK", style: .default, handler: nil)
        alertController.addAction(okAction)
        
        window?.rootViewController?.present(alertController, animated: true, completion: nil)
    }
}

