...
    @IBOutlet weak var speedViewHeightConstraint: NSLayoutConstraint!
    
    @IBOutlet var colorableViews: [UIView]!
    

    @IBAction func didTapMaxSpeed(_ sender: Any) {
        let alertController = UIAlertController(title: "최대 속도 선택",
                                                message: "이 최대 속도를 초과하면 경고 메시지가 표시됩니다.",
                                                preferredStyle: .alert)
        alertController.addTextField { [weak self] (textField) in
            textField.keyboardType = .numberPad
            textField.placeholder = "최대 속도 값을 입력해주세요"
            textField.accessibilityIdentifier = "maxSpeedInputLabel"
...
